fix navbar cutting off sidebars

--- a/hugo/assets/sass/_base.scss
+++ b/hugo/assets/sass/_base.scss
@@ -452,9 +452,8 @@ aside.td-sidebar-toc {
 }
 
 .td-sidebar-nav, .td-sidebar {
-  height: auto !important;
   max-height: 100% !important;
-  padding-top: 5px !important;
+  margin-top: 5px !important;
 }
 
 .fa-copy::before {
